<resources>
    <string name="app_name">Smart Sales Tracker</string>
    <string name="shop_details">Shop Details</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="splash_image">splash_image</string>
    <string name="where_data_meets_sales">Where Data Meets Sales</string>
    <string name="email">Email</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="password">Password</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="create_an_account">Create an account</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="image_logo">image_logo</string>
    <string name="enter_your_email_address_below_to_request_a_password_reset_email">Enter your email address below to request a password reset email.</string>
    <string name="request_email">Request Email</string>
    <string name="password_reset">Password Reset</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="fill_in_to_complete_setup">Fill in to complete setup</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_address">Shop Address</string>
    <string name="category">Category</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="barcode">Barcode</string>
    <string name="scan">Scan</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="add_item">Add Item</string>
    <string name="add_n_category">Add \n category</string>
    <string name="identifier">identifier</string>
    <string name="item_id">Item ID</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="manage_item">Manage Item</string>
    <string name="welcome">WELCOME</string>
    <string name="logout_button">logout button</string>
    <string name="profile_button">profile button</string>
    <string name="refresh_button">Refresh button</string>
    <string name="back_button">Back button</string>
    <string name="add_quantity">Add quantity</string>
    <string name="update_item">Update Item</string>
    <string name="_0">0</string>
    <string name="reduce">reduce</string>
    <string name="increment">increment</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="total_amount">Total Amount:</string>
    <string name="clear">Clear</string>
    <string name="_0_0">0.0</string>
    <string name="shop_type">Shop Type</string>
    <string name="cart_button">cart button</string>
    <string name="customer_n_management">Customer \n management</string>
    <string name="product_n_management">Product \n Management</string>
    <string name="reports_and_n_analysis">Reports And \n Analysis</string>
    <string name="exit_navigation_page">Exit navigation page</string>
    <string name="user_profile_setting">User profile setting</string>
    <string name="sales_analysis">sales analysis</string>
    <string name="clients">Clients</string>
    <string name="customer_management">customer management</string>
    <string name="profile">Profile</string>
    <string name="item_management">Item management</string>
    <string name="inventory">Inventory</string>
    <string name="menu">Menu</string>
    <string name="_33">33</string>
    <string name="qty">Qty:</string>
    <string name="customer_details_optional">Customer details</string>
    <string name="cash_amount">Cash Amount</string>
    <string name="balance">Balance:</string>
    <string name="pay_now">Pay Now</string>
    <string name="item">Item</string>
    <string name="item_image">item image</string>
    <string name="focus_products">Focus Products</string>
    <string name="refresh">Refresh</string>
    <string name="exit">Exit</string>
    <string name="highest_product_sales">Highest Product Sales</string>
    <string name="highest_quantity_product">Highest Quantity Product</string>
    <string name="lowest_quantity_product">Lowest Quantity Product</string>
    <string name="highest_price_product">Highest Price Product</string>
    <string name="lowest_price_product">Lowest Price Product</string>
    <string name="a">A</string>
    <string name="orders">Orders</string>
    <string name="period">Period</string>
    <string name="customer_name">Customer Name</string>
    <string name="new_sale">New Sale</string>
    <string name="you_are_good_to_go_we_ve_got_nyour_analysis_covered">You are good to go.We\'ve got\nyour analysis covered.</string>
    <string name="sale_completed">Sale Completed</string>
    <string name="done_icon">Done icon</string>
    <string name="customer_orders">Customer Orders</string>
    <string name="cash">Cash</string>
    <string name="mpesa">Mpesa</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="reports">Reports</string>
    <string name="low_stock_inventory">LOW STOCK INVENTORY</string>
    <string name="click_to_explore">Click to explore</string>
    <string name="_2">2</string>
    <string name="remaining_stock">REMAINING STOCK</string>
    <string name="move_to_previous_date">Move to previous date</string>
    <string name="move_to_current_date">Move to current date</string>
    <string name="today_21_may">Today :21 May</string>
    <string name="total_sales">TOTAL AMOUNT</string>
    <string name="ksh_0">Ksh 0</string>
    <string name="sales">SALES</string>
    <string name="sales_reports">Sales reports</string>
    <string name="_0_items">0 Items</string>
    <string name="total_sales_0">Total Sales: 0</string>
    <string name="mpesa_0">Mpesa: 0</string>
    <string name="cash_0">Cash: 0</string>
    <string name="sales_0">Sales: 0</string>
    <string name="user_profile">User Profile</string>
    <string name="name">Name:</string>
    <string name="john_doe">John Doe</string>
    <string name="email1">Email:</string>
    <string name="phone">Phone:</string>
    <string name="_0712345678">0712345678</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dismiss_edit">Dismiss Edit</string>
    <string name="user_name">User Name</string>
    <string name="johndoe_gmail_com">johndoe@gmail.com</string>

    <string-array name="shop_array">
        <item>Retail</item>
        <item>Wholesale</item>
    </string-array>

    <string-array name="gender_options">
        <item>Female</item>
        <item>Male</item>

    </string-array>
    <string-array name="payment_method_options">
        <item>Credit Card</item>
        <item>Cash</item>
        <item>PayPal</item>
    </string-array>
</resources>