<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".User_Profile_Update">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/exit_icon"
            android:id="@+id/back_button"
            android:contentDescription="@string/back"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/exit"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:textSize="20sp"
            android:id="@+id/exit"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_profile"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            android:id="@+id/user_profile"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:id="@+id/image"
            android:src="@drawable/growing"
            android:layout_below="@+id/user_profile"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/name_holder"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/image"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/name_holder"
            android:text="@string/john_doe"
            android:textSize="20sp"
            android:id="@+id/name"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:layout_below="@+id/image"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_holder"
            android:text="@string/email1"
            android:textSize="20sp"
            android:id="@+id/email_holder"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_toEndOf="@+id/email_holder"
            android:text="@string/johndoe_gmail_com"
            android:textSize="20sp"
            android:id="@+id/email"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_holder"
            android:text="@string/phone"
            android:textSize="20sp"
            android:id="@+id/phone_holder"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_toEndOf="@+id/phone_holder"
            android:text="@string/_0712345678"
            android:textSize="20sp"
            android:id="@+id/phone"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_holder"
            android:text="@string/edit_profile"
            android:textSize="20sp"
            android:id="@+id/edit_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/edit_icon"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_profile"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/edit_profile_layout"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            android:background="@drawable/textview_design"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dismiss_edit"
                android:textSize="20sp"
                android:id="@+id/dismiss_edit"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:id="@+id/name_layout"
                android:layout_marginTop="10dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_edit"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:id="@+id/phone_layout"
                android:layout_marginTop="20dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/phone_edit"
                    android:inputType="phone"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/update"
                android:id="@+id/update"
                android:background="@drawable/button_shape"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>