<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SaleCompletion">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_above="@+id/sale_completion"
            android:layout_centerHorizontal="true"
            android:src="@drawable/done_icon"
            android:background="@drawable/round_icon"
            android:id="@+id/back_button"
            android:contentDescription="@string/done_icon"
            />

        <TextView
            android:id="@+id/sale_completion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_centerInParent="true"
            android:textSize="30sp"
            android:text="@string/sale_completed"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/sale_completion"
            android:textAlignment="center"
            android:text="@string/you_are_good_to_go_we_ve_got_nyour_analysis_covered"
             />




    <Button
        android:id="@+id/new_sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/hyperlink"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_shape"
        android:text="@string/new_sale"
        android:textSize="20sp"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/hyperlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:text="@string/sales_analysis"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>