<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".Sign_Up">


    <ImageView
        android:layout_width="300dp"
        android:layout_height="170dp"
        android:contentDescription="@string/splash_image"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:src="@drawable/growing" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/container"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:text="@string/let_s_get_started"
            android:textColor="@color/light_blue"
            android:textStyle="bold"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/sign_in_sub_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/sign_in_text"
            android:text="@string/create_an_account"
            android:textSize="22sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_in_sub_text"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/full_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textField_name"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textField_phone"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textField_email"
            app:endIconMode="password_toggle"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textField_password"
            app:endIconMode="password_toggle"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/confirm_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textField_confirm_password"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_shape"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/btn_sign_in"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_centerInParent="true"
            >

            <TextView
                android:id="@+id/sign_up_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="16sp"

                />
            <TextView
                android:id="@+id/sign_in_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/light_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                />
        </LinearLayout>


    </RelativeLayout>


</LinearLayout>