<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Items_Cart">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="66dp"
        android:layout_height="53dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/cart_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:text="@string/my_cart"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_below="@+id/back_button"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/clear"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:id="@+id/clear_cart"
        android:layout_below="@+id/back_button"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cart_recycler_view"
        android:layout_below="@id/cart_title"
        android:layout_above="@+id/linear_layout"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_above="@+id/checkout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="15dp"
        android:gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            android:textSize="20sp"
            android:textStyle="bold"
            />

<TextView
    android:id="@+id/total_amount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/_0_0"
    android:drawableStart="@drawable/money_icon"
    android:textSize="20sp"
    android:textStyle="bold"
    android:textColor="@color/light_blue"
    />
    </LinearLayout>

    <Button
        android:id="@+id/checkout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/checkout"
        android:drawableEnd="@drawable/checkout_icon"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/button_shape"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>